# gdx-box2d

./: .gitignore  CMakeLists.txt  build.gradle.kts  build.sh  build_box2d.sh  gradle.properties
.github/workflows/: build.yaml  jnigen.yaml
gdx-box2d-utils/src/test/java/com/badlogic/gdx/box2d/utils/test/: Box2dWorldTaskSystemTest.java
src/main/java/com/badlogic/gdx/box2d/: Box2d.java  Box2dPlus.java  Id.java
src/main/java/com/badlogic/gdx/box2d/structs/: b2BodyId.java  b2ShapeId.java  b2SurfaceMaterial.java
